fix img and code-block overlap

--- a/app/assets/stylesheets/gruvbox-dark-modified.css
+++ b/app/assets/stylesheets/gruvbox-dark-modified.css
@@ -6,6 +6,7 @@ Gruvbox style (dark) (c) Pavel Pertsev (original style at https://github.com/mor
 
 .ck-content pre {
     background: #282828;
+    clear:both;
 }
 .ck-content pre code {
   display: block;
